--- a/documents-storage-jcr/pom.xml
+++ b/documents-storage-jcr/pom.xml
@@ -33,24 +33,30 @@
     </dependency>
     <dependency>
       <groupId>org.exoplatform.jcr</groupId>
-      <artifactId>exo.jcr.component.core</artifactId>
+        <artifactId>exo.jcr.component.core</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.exoplatform.jcr</groupId>
-      <artifactId>exo.jcr.component.ext</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.exoplatform</groupId>
-      <artifactId>exo-jcr-services</artifactId>
-    </dependency>
+      <dependency>
+          <groupId>org.exoplatform.jcr</groupId>
+          <artifactId>exo.jcr.component.ext</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.exoplatform</groupId>
+          <artifactId>exo-jcr-services</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>net.lingala.zip4j</groupId>
+          <artifactId>zip4j</artifactId>
+          <type>jar</type>
+          <scope>provided</scope>
+      </dependency>
 
-    <!-- Test -->
-    <dependency>
-      <groupId>org.exoplatform.social</groupId>
-      <artifactId>social-component-core</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
+      <!-- Test -->
+      <dependency>
+          <groupId>org.exoplatform.social</groupId>
+          <artifactId>social-component-core</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
     <finalName>documents-storage-jcr</finalName>
