--- a/documents-services/pom.xml
+++ b/documents-services/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>social-component-notification</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>net.lingala.zip4j</groupId>
+      <artifactId>zip4j</artifactId>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>org.exoplatform.social</groupId>
