--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>maven-exo-parent-pom</artifactId>
     <groupId>org.exoplatform</groupId>
-    <version>26-RC01</version>
+    <version>26</version>
   </parent>
   <groupId>org.exoplatform.documents</groupId>
   <artifactId>documents-parent</artifactId>
