--- a/documents-services/pom.xml
+++ b/documents-services/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.exoplatform.documents</groupId>
     <artifactId>documents-parent</artifactId>
-    <version>1.3.x-SNAPSHOT</version>
+    <version>1.3.0-20240409</version>
   </parent>
   <artifactId>documents-services</artifactId>
   <name>eXo Documents - Services</name>
