--- a/documents-webapp/pom.xml
+++ b/documents-webapp/pom.xml
@@ -10,7 +10,7 @@
   <name>eXo Documents - Application</name>
   <dependencies>
     <dependency>
-      <groupId>org.exoplatform.platform-ui</groupId>
+      <groupId>io.meeds.platform-ui</groupId>
       <artifactId>platform-ui-skin</artifactId>
       <classifier>sources</classifier>
       <scope>provided</scope>
