--- a/documents-services/pom.xml
+++ b/documents-services/pom.xml
@@ -27,12 +27,12 @@
     </dependency>
 
       <dependency>
-          <groupId>org.exoplatform.social</groupId>
+          <groupId>io.meeds.social</groupId>
           <artifactId>social-component-service</artifactId>
           <scope>provided</scope>
       </dependency>
       <dependency>
-          <groupId>org.exoplatform.social</groupId>
+          <groupId>io.meeds.social</groupId>
           <artifactId>social-component-notification</artifactId>
           <scope>provided</scope>
       </dependency>
@@ -44,13 +44,13 @@
       </dependency>
       <!-- Test -->
       <dependency>
-          <groupId>org.exoplatform.social</groupId>
+          <groupId>io.meeds.social</groupId>
           <artifactId>social-component-service</artifactId>
           <type>test-jar</type>
           <scope>test</scope>
       </dependency>
       <dependency>
-          <groupId>org.exoplatform.social</groupId>
+          <groupId>io.meeds.social</groupId>
           <artifactId>social-component-notification</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
