--- a/documents-storage-jcr/pom.xml
+++ b/documents-storage-jcr/pom.xml
@@ -18,12 +18,12 @@
     </dependency>
 
     <dependency>
-      <groupId>org.exoplatform.social</groupId>
+      <groupId>io.meeds.social</groupId>
       <artifactId>social-component-core</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.exoplatform.commons</groupId>
+      <groupId>io.meeds.commons</groupId>
       <artifactId>commons-component-common</artifactId>
       <scope>provided</scope>
     </dependency>
@@ -57,7 +57,7 @@
 
       <!-- Test -->
       <dependency>
-          <groupId>org.exoplatform.social</groupId>
+          <groupId>io.meeds.social</groupId>
           <artifactId>social-component-core</artifactId>
           <type>test-jar</type>
           <scope>test</scope>
