initiate new documents widget application

--- a/documents-webapp/.eslintrc.json
+++ b/documents-webapp/.eslintrc.json
@@ -3,6 +3,7 @@
     "eslint-config-meedsio"
   ],
   "globals": {
+    "Autolinker": true,
     "documentPreview": true,
     "DocumentsDraggable": true
   },
